# mig

./: COPYING  Cargo.toml
mig/: Cargo.toml
mig-postgres/: Cargo.toml
mig-postgres/src/: lib.rs
mig/src/: lib.rs  sources.rs  tests.rs
mig/src/tests/: driver.rs
mig/src/tests/error/: 002-error.sql
mig/src/tests/simple/: 001-basic.sql  002-part2.sql
