# SPDX-License-Identifier: MIT
[package]
name = "mig-postgres"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
tokio-postgres = "0.7.13"
async-trait.workspace = true
mig.path = "../mig"
